# python-project-lvl2

./: README.md  pyproject.toml
gendiff/scripts/: gendiff.py
