[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = ""
authors = ["Konstantin Mamaev <meison@meison.net>"]
license = "MIT"

packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
